--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+CastleDungeon/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+CastleDungeon/UserSettings/Layouts/default-2021.dwlt
