--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ crashlytics-build.properties
 
 CastleDungeon/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 CastleDungeon/UserSettings/Layouts/default-2021.dwlt
+CastleDungeon/UserSettings/Layouts/default-2021.dwlt
+CastleDungeon/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+CastleDungeon/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
