--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ CastleDungeon/UserSettings/Layouts/default-2021.dwlt
 CastleDungeon/UserSettings/Layouts/default-2021.dwlt
 CastleDungeon/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
 CastleDungeon/UserSettings/Layouts/CurrentMaximizeLayout.dwlt
+CastleDungeon/UserSettings/Layouts/default-2021.dwlt
+CastleDungeon/UserSettings/Layouts/default-2021.dwlt
